--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "tailwind-attr-variant",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "description": "A Babel plugin to transform custom Tailwind CSS attribute variants into standard Tailwind classes.",
+  "main": "tailwind-attr-variant.js",
+  "repository": "git@github.com:Imperialis-Tecnologia/tailwind-attr-variant.git",
   "scripts": {
     "test": "npx babel --plugins ./tailwind-attr-variant.js ./test.jsx"
   },
-  "keywords": [],
+  "keywords": [
+    "tailwindcss",
+    "babel-plugin",
+    "css",
+    "tailwind",
+    "variants",
+    "jsx"
+  ],
   "author": "Diego Barreto da Cunha (github.com/BarretoDiego)",
   "license": "ISC",
   "devDependencies": {
@@ -15,5 +23,8 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/types": "^7.23.9"
+  },
+  "peerDependencies": {
+    "@babel/core": "^7.0.0"
   }
 }
